examples/datalog/18_advanced_patterns/36_bill_of_materials.dl
% Test: Bill of materials pattern
% Expected: Recursive parts explosion
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_bom
.kg use test_bom

+component[("car", "engine", 1), ("car", "wheel", 4), ("engine", "piston", 4), ("engine", "sparkplug", 4)].

% All parts needed (recursive)
+all_parts(Product, Part, Qty) :- component(Product, Part, Qty).
+all_parts(Product, SubPart, TotalQty) :- component(Product, Part, Q1), all_parts(Part, SubPart, Q2), TotalQty = Q1 * Q2.

?- all_parts("car", Part, Qty).

.kg use default
.kg drop test_bom
